Bug 1554813 - Size the scroll parts clip to the scroll frame's true outer size. r=tnikkel

Differential Revision: https://phabricator.services.mozilla.com/D33377